# robo-butler-r

./: README.en.md  README.md
controllers/control_task2/: CMakeLists.txt
controllers/control_task2/Param/: param_gait.yaml
controllers/control_task2/src/: butler.cpp  main.cpp
controllers/hardware_task2/inc/: spi_node.h
controllers/hardware_task2/src/: main.cpp
controllers/navigation_task2/inc/: base_struct.h  can.h
controllers/tinyscretch/: CMakeLists.txt  tinyscretch
controllers/tinyscretch/Data/: file1.txt  file2.txt  file3.txt  file4.txt  file5.txt  plot -2leg.m  plot2leg.m
controllers/tinyscretch/Map/: cube_cog.txt  draw_local_map_good_location_cube.prj  fake_map_anal.m  fake_map_gen.m  fake_map_gen_guass.m  foot_good_foot_found.prj  foot_sel_on_map.prj  limit.m  limit_i.m  map_location.prj  move_local_map.m  move_local_map.prj  move_local_map_cplus.prj  vision_location_1.m  way_point.txt
controllers/tinyscretch/Map/codegen/lib/draw_local_map_good_location_cube/: bwlabel.cpp  bwlabel.h  draw_local_map_good_location_cube.cpp  draw_local_map_good_location_cube.h  draw_local_map_good_location_cube_initialize.cpp  draw_local_map_good_location_cube_initialize.h  draw_local_map_good_location_cube_rtw.bat  draw_local_map_good_location_cube_rtw.mk  draw_local_map_good_location_cube_terminate.cpp  draw_local_map_good_location_cube_terminate.h  draw_local_map_good_location_cube_types.h  rtw_proj.tmw  rtwtypes.h
controllers/tinyscretch/Map/codegen/lib/foot_good_foot_found/: foot_good_foot_found.c  foot_good_foot_found.h  foot_good_foot_found_rtw.bat  foot_good_foot_found_rtw.mk  foot_good_foot_found_types.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h
controllers/tinyscretch/include_vmc/: PositionVelocityEstimator.h  adrc.h  base_struct.h  contact_detection.h  gait_math.h  ground_att_est_n.h  locomotion_header.h  webot_vmc.h
controllers/tinyscretch/include_wb/: ai_touch.h  include.h  optimaize.h  robotInfo.h  wbInterface.h
controllers/tinyscretch/locomotion_src/: adrc.cpp  force_imp_controller.cpp  hardware_interface.cpp  locomotion_sfm.cpp  state_estimator.cpp  vmc_controller.cpp
controllers/tinyscretch/math_src/: PositionVelocityEstimator.cpp  RT_math.cpp  common_math.cpp  kin_math.cpp  kin_math_pino.cpp  kin_math_rbdl.cpp  robotmath.h  rtGetInf.cpp  rtGetNaN.cpp  rt_nonfinite.cpp  traj_math.cpp  vision_locomotion.cpp  zmp_math.cpp
controllers/tinyscretch/mpc/: SolverMPC.cpp  mpc_locomotion.cpp  mpc_locomotion.h
controllers/tinyscretch/rbdl_src/model/: RobotDefinition.hpp
controllers/tinyscretch/rbdl_src/urdf/: TinyArm5.urdf
controllers/tinyscretch/share_mem/: memory_share.cpp
controllers/tinyscretch/source/: wbInterface.cpp
controllers/tinyscretch/src_sim/: memory_share_sim.cpp  tinystretch.cpp  wbInterface.cpp  wbInterface.h
protos/TinyStretch/: CMakeLists.txt  package.xml
protos/TinyStretch/config/: joint_names_TinyStretch.yaml
protos/TinyStretch/launch/: display.launch  gazebo.launch
protos/TinyStretch/urdf/: TinyStretch.csv  TinyStretch.urdf  TinyStretch_arm.urdf
(+57 files in other folders)
